--- a/docs/team/francislow.adoc
+++ b/docs/team/francislow.adoc
@@ -18,7 +18,7 @@ NurseTraverse is a desktop application meant for community nurse to help manage 
 -  Allows the user to easily complete a full command with or without typing. +
 -  Guides user in selecting which command to enter next through commands classifications in suggestion panel and command explanations in result box +
 ** Justification: Nurses and new users may not be familiar with command line input and the different types commands in the application. Thus, having a suggestion panel at the side will greatly enhance user experience, especially for slow typers. Having a guided system will aid nurses in familiarising with the application commands and understanding of the different functions in the system in general.
-** Highlights: The implementation of word suggestion is rather tedious since many of the full commands have different formats. For example, "pat-list" do not require any patient index and prefixes but "pat-edit 1 n/ ..." requires both. Thus the implementation of list handliers were changed a few times to fit the objective of providing a better user experience. Logic for checking already matched words in order to change a new set of suggestion words is challenging as well, mainly due to many commands having different formats as mentioned earlier.
+** Highlights: The implementation of word suggestion is rather tedious since many of the full commands have different formats. For example, "pat-list" do not require any patient index and prefixes but "pat-edit 1 n/ ..." requires both. Thus the implementation of list handlers were changed a few times to fit the objective of providing a better user experience. Logic for checking already matched words in order to change a new set of suggestion words is challenging as well, mainly due to many commands having different formats as mentioned earlier.
 ** Credits: No outside code or ideas were referenced in the development of these features (beyond code that already exists within Address Book 3).
 
 * *Code contributed*: An overview of contributed code can be found
